tutorials/observability/03-cluster-kubernetes-tracing/application/cluster/MobileNetV2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilenetv2
  labels:
    app: mobilenetv2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilenetv2
      version: v1
  template:
    metadata:
      labels:
        app: mobilenetv2
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: mobilenetv2
          image: hongtringuyen/inference:sys4bigml
          ports:
            - containerPort: 5012
          args: ["--model", "MobileNetV2"]
          resources:
            requests:
              cpu: "1500m"
              memory: "200Mi"
            limits:
              cpu: "2000m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mobilenetv2-service
spec:
  ports:
    - port: 5012
      targetPort: 5012
  selector:
    app: mobilenetv2
